Added foregroundservice with stop, pause and resume button. Changed foreground servive notification channel priority to low, so it will not make a sound on start, notify

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Free Active</string>
     <string name="action_settings">Settings</string>
+    <string name="notification_stop">stop</string>
+    <string name="notification_resume">resume</string>
+    <string name="notification_pause">pause</string>
 </resources>
