--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="notification_stop">stop</string>
     <string name="notification_resume">resume</string>
     <string name="notification_pause">pause</string>
+    <string name="notification_tracker_title">Free Active is Tracking</string>
 </resources>
