managing pause and resume state correctly and dislaying a paused title in the notification. Implemented additional state checking in ActivityTracker in paause and resume.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="notification_stop">stop</string>
     <string name="notification_resume">resume</string>
     <string name="notification_pause">pause</string>
-    <string name="notification_tracker_title">Free Active is Tracking</string>
+    <string name="notification_tracker_title_tracking_ongoing">Free Active is Tracking</string>
+    <string name="notification_tracker_title_tracking_paused">Free Active Tracking Paused</string>
 </resources>
